# coldrun

./: .gitignore  Cargo.toml  LICENSE  PROMPT.md  README.md
.coldrun-t/: manifest.json
clickhouse-local/: README.md
crates/coldrun-cli/: Cargo.toml
crates/coldrun-cli/src/: main.rs
crates/coldrun-core/: Cargo.toml
crates/coldrun-core/src/: error.rs  lib.rs
crates/coldrun-core/src/exec/: agg_heap.rs  agg_sort.rs  agg_topk.rs  aggregate.rs  column_slice.rs  fast_agg.rs  fast_q29.rs  filter.rs  filter_fast.rs  group.rs  group_columnar.rs  group_direct.rs  group_fused.rs  group_fused_q11.rs  group_fused_q22.rs  group_fused_q23.rs  group_fused_q29.rs  group_fused_q36.rs  group_fused_q40.rs  group_fused_q41.rs  group_fused_q43.rs  group_int.rs  group_near_unique.rs  group_referrer.rs  group_sorted.rs  group_utf8.rs  having.rs  mask_util.rs  mod.rs  scan.rs  scan_fast.rs  scan_stream.rs  simd_count.rs  simd_scan.rs  topk.rs  utf8_arena.rs
crates/coldrun-core/src/expr/: eval.rs  mod.rs
crates/coldrun-core/src/sql/: columns.rs  mod.rs
crates/coldrun-core/src/storage/: column.rs  column_blocks.rs  column_staging.rs  column_stream.rs  demo.rs  load.rs  mod.rs  pod.rs  table.rs  utf8_col.rs  zones.rs
docs/: ARCHITECTURE.md  CLOUD-RUN.md  NEXT.md  PERF.md  SMOKE-DEMO.md
scripts/: bench-all.sh  bench-clickbench.sh  bench-clickhouse-parquet.sh  bench-compare.sh  bench-demo.sh  bench-regression.sh  bench-serve.sh  cloud-dry-run-local.sh  install-clickhouse-local.sh  measure-parquet.sh  overnight-regression.sh  perf-q-commits.sh  perf-q-pass2.sh  repro-local.sh  smoke-all.sh  (+3 more)
(+124 files in other folders)
