[workspace]
resolver = "2"
members = ["crates/coldrun-core", "crates/coldrun-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/tylerhannan/coldrun"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
arrow = "54"
clap = { version = "4", features = ["derive"] }
lz4_flex = "0.11"
memmap2 = "0.9"
rayon = "1.10"
parquet = { version = "54", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1"
sqlparser = "0.53"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
